data/derived/comb/progs/unify/prog6390.ml.out
Characters 63-81:
  | front::back -> (listReverse back) ::front;;
                   ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
